fixed calendar alignment

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+
 .container {
     display: grid;
     gap: 1rem;
@@ -10,7 +11,6 @@
     display: flex;
     justify-content: right;
     align-items: flex-end;
-    /*background-color: red;*/
 }
 
 .subheader{
@@ -21,7 +21,24 @@
 .subheader > div{
     align-items: end;
 }
-
+.react-datepicker-wrapper{
+    width: 40%;
+}
 .react-datepicker__input-container > input{
     text-align: right;
+    width: 100%;
+}
+
+.row {
+    padding-top: 10px;
+}
+
+.custom {
+    border: 2px solid gray;
+    color: gray;
+    background-color: white;
+    padding: 8px 20px;
+    border-radius: 8px;
+    font-size: 18px;
+    font-weight: bold;
 }
